Long Press on Inactive Search Box no longer causes touch handle to appear

Bug: 882643
Change-Id: I6681f064e8a21ac5557c4c2adb4633af248e0119
Reviewed-on: https://chromium-review.googlesource.com/1217756
Reviewed-by: Weidong Guo <weidongg@chromium.org>
Commit-Queue: Kevin Strohbehn <ginko@google.com>
Cr-Commit-Position: refs/heads/master@{#590117}
Former-commit-id: a9970a077fe564166b92de0692d794353ffabcba